<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="30dip"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        style="@style/Text.Medium.Title"
        android:layout_width="@dimen/column_rank_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rank_title" />

    <View
        android:layout_width="1px"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/divider_horizontal_bright" />

    <TextView
        style="@style/Text.Medium.Title"
        android:layout_width="@dimen/column_player_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/player_title" />

    <View
        android:layout_width="1px"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/divider_horizontal_bright" />

    <TextView
        style="@style/Text.Medium.Title"
        android:layout_width="@dimen/column_time_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time_title" />

    <View
        android:layout_width="1px"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/divider_horizontal_bright" />

    <TextView
        style="@style/Text.Medium.Title"
        android:layout_width="@dimen/column_steps_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/steps_title" />

    <View
        android:layout_width="1px"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/divider_horizontal_bright" />

    <TextView
        style="@style/Text.Medium.Title"
        android:layout_width="@dimen/column_score_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/score_title" />

    <View
        android:layout_width="1px"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/divider_horizontal_bright" />

    <TextView
        style="@style/Text.Medium.Title"
        android:layout_width="@dimen/column_star_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/star_title" />

    <View
        android:layout_width="1px"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/divider_horizontal_bright" />

    <TextView
        style="@style/Text.Medium.Title"
        android:layout_width="@dimen/column_date_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/date_title" />
    
</LinearLayout>